--- a/config.yaml
+++ b/config.yaml
@@ -1,5 +1,6 @@
 database:
-  host: your_host
-  database: your_database
-  user: your_username
-  password: your_password
+  host: <数据库主机地址>
+  port: <数据库端口>
+  user: <数据库用户名>
+  password: <数据库密码>
+  database: <数据库名称>
