--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,13 @@ license = "GPL-3.0-or-later"
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.10"
-fastapi = "^0.97.0"
-uvicorn = "^0.22.0"
-jinja2 = "^3.1.2"
-markupsafe = "^2.1.3"
-
+python = "^3.9"
+fastapi = "^0.65.2"
+asyncpg = "^0.24.0"
+passlib = "^1.7.4"
+pydantic = "^1.8.2"
+python-multipart = "^0.0.5"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
