--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ python = "^3.9"
 fastapi = "^0.65.2"
 asyncpg = "^0.24.0"
 passlib = "^1.7.4"
-pydantic = "^1.8.2"
+uvicorn = "^0.22.0"
 python-multipart = "^0.0.5"
 
 [build-system]
