fix a large bug

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ fastapi = "^0.65.2"
 asyncpg = "^0.24.0"
 passlib = "^1.7.4"
 uvicorn = "^0.22.0"
+pyyaml = "^6.0"
 python-multipart = "^0.0.5"
+asyncio = "^3.4.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
