--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ uvicorn = "^0.22.0"
 pyyaml = "^6.0"
 python-multipart = "^0.0.5"
 asyncio = "^3.4.3"
-bcrypt ="4.0.1"
+bcrypt ="^4.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
