--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pyyaml = "^6.0"
 python-multipart = "^0.0.5"
 asyncio = "^3.4.3"
 bcrypt ="^4.0.1"
+jinja2 ="^2.1.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
